syntax = "proto3";

package schema;

option go_package = "schema";

message User {
  string id = 1;
  string name = 2;
}

message Message {
  string user_id = 1;
  string content = 2;
  string timestamp = 3;
}

message Connect {
  User user = 1;
  bool active = 2;
}

message Close {}

service Broadcast {
  rpc CreateStream(Connect) returns (stream Message){};
  rpc BroadcastMessage(Message)returns(Close){};
}